2004-06-22 Alain Magloire

	Fix the exclusion scheme in IPathEntry.

	* model/org/eclipse/cdt/core/mode/CoreModelUtil.java
	* model/org/eclipse/cdt/internal/core/model/CContainer.java
	* model/org/eclipse/cdt/internal/core/model/Openable.java
	* model/org/eclipse/cdt/internal/core/model/SourceRoot.java

2004-06-21 Alain Magloire

	Big Patch from Vladimir Hirsl
	Implementation of AIX XCOFF32 binary parser.

	* utils/org/eclipse/cdt/utils/xcoff/AR.java
	* utils/org/eclipse/cdt/utils/xcoff/XCoff32.java

	* utils/org/eclipse/cdt/utils/xcoff/parser/ARMember.java
	* utils/org/eclipse/cdt/utils/xcoff/parser/BinaryArchive.java
	* utils/org/eclipse/cdt/utils/xcoff/parser/XCOFF32Parser.java
	* utils/org/eclipse/cdt/utils/xcoff/parser/XCOFFBinaryObject.java
	
2004-06-21 Alain Magloire

	The PathEntryManager was returning the array instead
	of making a copy.  Potentially clients could have
	modified the contents.

	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java
	* model/org/eclipse/cdt/internal/core/model/IMacroEntry.java
	* src/org/eclipse/cdt/core/resources/ScannerProvider.java

2004-06-21 Hoda Amer
	Fix for PR 67696: [I18N] - New Class Wizard does not take project encoding into account when creating files
	Now the encoding is taken into consideration when committing a working copy contents to a file.
	* model/org/eclipse/cdt/internal/core/model/Buffer.java
	* model/org/eclipse/cdt/internal/core/model/WorkingCopy.java
	
2004-06-18 Alain Magloire

	Fix for PR 66108

2004-06-18 Alain Magloire

	This was heavy and lots of files were change.  The problem: to create the CElementInfo we use
	to synchronize of the CModelManager singleton instance, this was handy and allowed us to serialize
	the creation of the proxy info and save in the LRU cache.  Then came Eclipse-3.0 with job spawning
	everywhere, lots of deadlock since the CModelManager was lock and the singleton is the center