@@ -1,3 +1,10 @@
+2004-06-22 Alain Magloire
+	Part of PR 68246.
+	Close the inputstream to release resource handle
+	when we done with it, we can not rely on the GC to do it for us.
+
+	* search/org/eclipse/cdt/internal/core/search/matching/MatchLocator.java
+
 2004-06-21 Bogdan Gheorghe
 	Modified JobManager to change state from waiting to enabled on a job request.
 	
